(Windows) extended view/piano roll rendering bleed fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,7 +259,7 @@ main .sequencer .content .extended {
     position: absolute;
     width: 100%;
     height: 176px;
-    bottom: 0;
+    bottom: -1px;
     border: 0;
     border-top: 2px solid #0CE;
     background: #FFF;
